tests/build_fail/bseq_fail_num_expr_negative.stderr
error: expected bitsequence but got integer instead.
 --> tests/build_fail/bseq_fail_num_expr_negative.rs:4:11
  |
4 |     bseq!(-0:0);
  |           ^
